feat(api): update API client effects
