# src/shared/api/openapi.yaml
@@ -42,6 +42,30 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/AuthorDto'
+        '404':
+          description: Not Found
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '500':
+          description: Server Error
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
   /api/v1/comments/{commentId}:
     get:
       tags:
@@ -68,6 +92,30 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/CommentDto'
+        '404':
+          description: Not Found
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '500':
+          description: Server Error
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
   /api/v1/comments:
     get:
       tags:
@@ -119,6 +167,30 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CommentDto'
+        '400':
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+        '500':
+          description: Server Error
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
     post:
       tags:
         - Comments
@@ -135,8 +207,8 @@ paths:
             schema:
               $ref: '#/components/schemas/CommentRequest'
       responses:
-        '200':
-          description: Success
+        '201':
+          description: Created
           content:
             text/plain:
               schema:
@@ -147,6 +219,42 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/CommentDto'
+        '400':
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+        '403':
+          description: Forbidden
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '500':
+          description: Server Error
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
   /api/v1/comments/{parentCommentId}/replies:
     get:
       tags:
@@ -193,6 +301,42 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CommentDto'
+        '400':
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+        '404':
+          description: Not Found
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '500':
+          description: Server Error
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
     post:
       tags:
         - Comments
@@ -217,8 +361,8 @@ paths:
             schema:
               $ref: '#/components/schemas/ReplyRequest'
       responses:
-        '200':
-          description: Success
+        '201':
+          description: Created
           content:
             text/plain:
               schema:
@@ -229,6 +373,54 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/CommentDto'
+        '400':
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ValidationProblem'
+        '403':
+          description: Forbidden
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '404':
+          description: Not Found
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '500':
+          description: Server Error
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
   /api/v1/discussions/{discussionId}:
     get:
       tags:
@@ -701,17 +893,29 @@ components:
         description:
           type: string
       additionalProperties: false
+    Problem:
+      type: object
+      properties:
+        error_description:
+          type: string
+      additionalProperties: false
     ReplyRequest:
       type: object
       properties:
         content:
           type: string
       additionalProperties: false
-    Problem:
+    ValidationProblem:
       type: object
       properties:
         error_description:
           type: string
+        validation_errors:
+          type: object
+          additionalProperties:
+            type: array
+            items:
+              type: string
       additionalProperties: false
     UsersGetByIdResponse:
       type: object
@@ -809,18 +1013,6 @@ components:
         avatar_url:
           type: string
           nullable: true
-      additionalProperties: false
-    ValidationProblem:
-      type: object
-      properties:
-        error_description:
-          type: string
-        validation_errors:
-          type: object
-          additionalProperties:
-            type: array
-            items:
-              type: string
       additionalProperties: false
 x-tagGroups:
   - name: crowdparlay_social
